# Spottier

./: .gitignore  CONTRIBUTING.md  LICENSE  MakeFile  README.md
deploy/: .env  docker-compose.yaml  loki-config.yaml
deploy/e2e/: test.py
deploy/grafana_provisioning/: FastAPI Dashboard-1700398544919.json
deploy/policy-enforcement-service/: policies.yaml
deploy/prometheus_data/: prometheus.yml
services/TGreport-service/: run.sh
services/match-service/: .env  DockerFile  alembic.ini  requirements.txt  run.sh
services/notify-service/: .env  DockerFile  README.md  app.py  requirements.txt
services/policy-service/: .env  DockerFile  policies.yaml  requirements.txt
services/spot-service/: .env  DockerFile  README.md  map.html  pyproject.toml  requirements.txt  run.sh
services/spot-service/app/: __init__.py  app.py  config.py  crud.py
services/spot-service/app/database/: database.py
services/spot-service/app/models/: __init__.py  models.py
services/spot-service/app/schemas/: __init__.py  spot.py
services/team-service/: .env  DockerFile  alembic.ini  requirements.txt
services/user-service/: .env  DockerFile  README.md  pyproject.toml  requirements.txt  run.sh
services/user-service/app/: __init__.py  app.py  config.py  manager.py
services/user-service/app/auth/: __init__.py  auth.py  database.py  manager.py  schemas.py
services/user-service/app/database/: __init__.py  database.py
services/user-service/app/models/: models.py
services/user-service/app/schemas/: __init__.py  schemas.py
services/user-service/test/: test_auth.py
(+23 files in other folders)
