[tool.poetry]
name = "spot-service"
version = "0.1.0"
description = ""
authors = ["Apersant1 <miracles.on.the.turn@gmail.com>"]
readme = "README.md"
packages = [{include = "spot_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
